[package]
name = "lightpack"
description = "A lightweight, no-std binary serialization library"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightpack-derive = { version = "0.1.0", path = "lightpack-derive" }
lightpack-shared = { version = "0.1.0", path = "lightpack-shared" }
byteorder = { workspace = true }

[workspace]
members = [
    "lightpack-derive",
    "lightpack-shared",
]

[workspace.dependencies]
byteorder = "1"
