[package]
name = "lightpack"
description = "A lightweight, no-std binary serialization library"
homepage = "https://github.com/ProjectLighthouseCAU/lightpack"
repository = "https://github.com/ProjectLighthouseCAU/lightpack"
version = "0.2.3"
edition = "2021"
categories = ["encoding", "no-std"]
keywords = ["binary", "serialization", "deserialization", "no-std"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lightpack-derive = { version = "0.2.3", path = "lightpack-derive" }
byteorder = { workspace = true }

[workspace]
members = [
    "lightpack-derive",
    "lightpack-extra",
]

[workspace.dependencies]
byteorder = { version = "1", default-features = false }
