[package]
name = "lightpack-derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
lightpack-shared = { version = "0.1.0", path = "../lightpack-shared" }
proc-macro2 = "1.0"
syn = "2.0"
quote = "1.0"
