[package]
name = "lightpack-derive"
description = "Implementation of #[derive(Size, Pack, Unpack)]"
homepage = "https://github.com/ProjectLighthouseCAU/lightpack"
repository = "https://github.com/ProjectLighthouseCAU/lightpack"
version = "0.2.5"
edition = "2021"
categories = ["encoding", "no-std"]
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "2.0"
quote = "1.0"
